# Supernova-MicroK8s-Infra

./: .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .mise.local.toml  .mise.toml  .pre-commit-config.yaml  .terraform-docs.yml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: repo-question.md
.cursor/commands/: create-task.md  execute-task.md  git-commit.md
.cursor/rules/: repo-question.mdc
.devcontainer/: devcontainer.json
.github/workflows/: documentation.yml  use-sync-labels.yml
ansible/: README.md  ansible.cfg  requirements.yml
ansible/files/: README.md  jumpbox.yaml  microk8s-data.yml  microk8s.yaml  terraform_authorized_keys
ansible/group_vars/: all.yml
ansible/inventory/: hosts.yml  inventory.ini  production.yml  proxmox.yml  testing.yml
ansible/playbooks/: README-add-system-user.md  README-proxmox-build-template.md  README-proxmox-create-terraform-user.md  README-proxmox-enable-vlan-bridging.md  add-file-to-host.yml  add-system-user.yml  get-users.yml  microk8s-deploy.yml  playbook.yml  (+2 more)
docs/: INDEX.md  PRD.md  ansible-adhoc-cmds.md  blueprint.md  developer-tools.md  iac-implementation-plan.md  inspiration.md  learning-roadmap.md  proxmox-qm-cmd.md  talos-blueprint.md
infrastructure/: .terraform-docs.yml  CHANGELOG.md  README.md  versions.tf
scripts/: build-template.sh  generate-ansible-inventory.sh  generate-docs.sh
tasks/: INDEX.md  README.md  template.md
terraform/: README.md  hrnph-README.md  locals.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  versions.tf
(+184 files in other folders)
